# limp-cbc

./: .travis.yml  README.md  copy-cbc.sh  limp-cbc.cabal
cbits/: Cbc.cpp  Cbc.h
cbits/coin/: CbcOrClpParam.cpp  CglClique.cpp  ClpSimplex.cpp  ClpSimplex.hpp  ClpSolve.cpp
examples/: Base.hs  Clustering.hs  Infeasible.hs  Simple.hs  Stupid.hs  Test.hs
src/: Test.hs
src/Numeric/Limp/Solvers/: Cbc.hs
src/Numeric/Limp/Solvers/Cbc/: Error.hs  MatrixRepr.hs  Solve.hs
src/Numeric/Limp/Solvers/Cbc/Internal/: Foreign.chs  Wrapper.hs
test/: Main.hs
