name:                limp-cbc
version:             0.2.8.6
synopsis:            Coin/CBC bindings
-- description:         
license:             MIT
author:              Amos Robinson
maintainer:          amos.robinson@gmail.com
-- category:            
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:
        Numeric.Limp.Solvers.Cbc
        Numeric.Limp.Solvers.Cbc.Solve
        Numeric.Limp.Solvers.Cbc.MatrixRepr

  other-modules:       
        Numeric.Limp.Solvers.Cbc.Internal.Foreign
        Numeric.Limp.Solvers.Cbc.Internal.Wrapper
  build-depends:
        base,
        containers,
        vector,
        limp

  ghc-options: -Wall -Werror -fno-warn-orphans -O2
  default-language: Haskell2010
  default-extensions:       TemplateHaskell TypeFamilies FlexibleContexts GeneralizedNewtypeDeriving DataKinds GADTs RankNTypes

  build-tools:      c2hs

  extra-libraries:  Cbc Clp CbcSolver Cgl Osi OsiCbc OsiClp OsiCommonTests CoinUtils CoinMP stdc++
  Include-dirs:     cbits
  includes:         Cbc.h coin/Cbc_C_Interface.h
  C-sources:        cbits/Cbc.cpp
